--- a/src/app/shared/navbar/navbar.component.html
+++ b/src/app/shared/navbar/navbar.component.html
@@ -1,14 +1,14 @@
-<nav class="flex items-center justify-between bg-gray-50 px-6 py-4 text-blue-600">
-  <h1 class="text-xl sm:text-2xl font-bold">
+<nav class="flex items-center justify-between bg-gray-50">
+  <h1 class="text-xl sm:text-2xl font-bold px-6 py-4 text-blue-800">
     <a routerLink="/">
       My Translator
     </a>
   </h1>
-  <ul class="hidden sm:flex space-x-6 text-lg">
+  <ul class="hidden sm:flex space-x-6 text-lg px-6 py-4">
     <li><a routerLink="/about_us" routerLinkActive="font-bold underline">About US</a></li>
     <li><a routerLink="/about_project" routerLinkActive="font-bold underline">About Project</a></li>
   </ul>
-  <button class="sm:hidden text-2xl" (click)="toggleMenu()">☰</button>
+  <button class="sm:hidden text-2xl hover:bg-gray-200 w-16 py-4" (click)="toggleMenu()">{{ isMenuOpen ? '🗙' : '☰' }}</button>
 </nav>
 
 @if (isMenuOpen) {
@@ -18,14 +18,14 @@
     <a
       routerLink="/about_us"
       (click)="closeMenu()"
-      class="w-full px-6 py-4 hover:bg-blue-100 transition-colors duration-1000 ease-in-out"
+      class="w-full px-6 py-4 hover:bg-gray-200 hover:text-blue-800 transition-colors duration-500 ease-in-out"
       >
       About US
     </a>
     <a
       routerLink="/about_project"
       (click)="closeMenu()"
-      class="w-full px-6 py-4 hover:bg-blue-100 transition-colors duration-1000 ease-in-out"
+      class="w-full px-6 py-4 hover:bg-gray-200 hover:text-blue-800 transition-colors duration-500 ease-in-out"
       >
       About Project
     </a>
