--- a/src/app/shared/navbar/navbar.component.html
+++ b/src/app/shared/navbar/navbar.component.html
@@ -5,7 +5,7 @@
     </a>
   </h1>
   <ul class="hidden sm:flex space-x-6 text-lg px-6 py-4">
-    <li><a routerLink="/about_us" routerLinkActive="font-bold underline">About US</a></li>
+    <li><a routerLink="/devlog" routerLinkActive="font-bold underline">DevLog</a></li>
     <li><a routerLink="/about_project" routerLinkActive="font-bold underline">About Project</a></li>
   </ul>
   <button class="sm:hidden text-2xl hover:bg-gray-200 w-16 py-4" (click)="toggleMenu()">{{ isMenuOpen ? '🗙' : '☰' }}</button>
@@ -16,11 +16,11 @@
     class="absolute z-100 w-full bg-gray-50 text-gray-700 flex flex-col sm:hidden"
     >
     <a
-      routerLink="/about_us"
+      routerLink="/devlog"
       (click)="closeMenu()"
       class="w-full px-6 py-4 hover:bg-gray-200 hover:text-blue-800 transition-colors duration-500 ease-in-out"
       >
-      About US
+      DevLog
     </a>
     <a
       routerLink="/about_project"
