Changed classes in a couple of places; Clicking on the navbar logo closes the dropdown

--- a/src/app/pages/main/main.component.html
+++ b/src/app/pages/main/main.component.html
@@ -1,4 +1,4 @@
-<div class="p-10 w-full mx-auto space-y-6">
+<div class="px-10 w-full mx-auto my-6 space-y-6">
 
   @if (showErrorNotification) {
     <div
