--- a/src/app/shared/navbar/navbar.component.html
+++ b/src/app/shared/navbar/navbar.component.html
@@ -1,6 +1,6 @@
 <nav class="flex items-center justify-between bg-gray-50">
   <h1 class="text-xl sm:text-2xl font-bold px-6 py-4 text-blue-800">
-    <a routerLink="/">
+    <a routerLink="/" (click)="closeMenu()">
       AI Translator
     </a>
   </h1>
