--- a/src/app/pages/about-project/about-project.component.html
+++ b/src/app/pages/about-project/about-project.component.html
@@ -1,5 +1,5 @@
-<div class="align-middle text-center m-4 bg-blue-200 p-10 border-2 border-blue-400 sm:rounded-2xl sm:m-10">
-        <h1 class="font-bold text-2xl text-blue-950 underline mb-6 sm:mt-4 sm:mb-12 sm:text-3xl md:text-4xl lg:text-5xl">Welcome to AI Translator!</h1>
+<div class="align-middle text-center bg-blue-200 p-10 border-2 border-blue-400 sm:rounded-2xl my-6 mx-4 sm:mx-10 md:mx-16 lg:mx-24">
+        <h1 class="font-bold text-2xl text-blue-950 underline mb-6 sm:mt-2 sm:mb-12 sm:text-3xl md:text-4xl lg:text-5xl">Welcome to AI Translator!</h1>
 
         <p class="my-6 mx-4 sm:my-10 sm:mx-6 text-sm sm:text-base md:text-lg text-blue-950">This web application is designed to make text translation simple, fast, and enjoyable.</p>
 
