--- a/src/app/app.html
+++ b/src/app/app.html
@@ -1,5 +1,9 @@
-<app-navbar></app-navbar>
+<div class="flex flex-col min-h-screen">
+  <app-navbar></app-navbar>
 
-<main>
-  <router-outlet></router-outlet>
-</main>
+  <main class="flex-grow">
+    <router-outlet></router-outlet>
+  </main>
+
+  <app-footer></app-footer>
+</div>
